# API-WEB-AluguelVeiculo

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  modelos.py  pyproject.toml
app/: excecoes.py  main.py  script-carga.py
app/config/: minio_client.py  settings.py
app/esquemas/: aluguel_DTO.py  cliente_DTO.py  comodidade_DTO.py  ofertador_DTO.py  veiculo_DTO.py
app/modelos/: aluguel.py  cliente.py  comodidade.py  documento.py  ofertador.py  veiculo.py
app/rotas/: aluguel_rotas.py  cliente_rotas.py  comodidade_rotas.py  consultas.py  documento_rotas.py  ofertador_rotas.py  veiculo_rotas.py
docs/: divisao-tarefas.txt
